# drone_swarm_control_DMPC_MARL

./: .gitignore  .gitmodules
Control_Swarm/: .gitignore  pyproject.toml
Control_Swarm/experiments/exp_dmpc_gym/: generate_all_figures.py  inspect_recording.py  replay_dmpc_swarm.py  replay_dmpc_swarm_RefPos.py  replay_dmpc_swarm_RefPos2.py  replay_dmpc_swarm_obstacle_plots_Noise.py  run_dmpc_swarm_G_backup.py  run_dmpc_swarm_headless.py  run_dmpc_swarm_headless_RefPos.py  run_dmpc_swarm_headless_RefPos2.py  run_dmpc_swarm_headless_obstacle.py  run_dmpc_swarm_headless_obstacle_plots.py  run_dmpc_swarm_headless_obstacle_plots_Noise.py  test_dmpc_control.py
Control_Swarm/src/control_swarm/controllers/dmpc_gym/: DMPCControl.py  DMPCControlRuntime.py  DMPCControl_G_backup.py  DMPCControl_Obstacle.py  (+4 more)
Control_Swarm/src/control_swarm/ros_nodes/: swarm_dmpc_node.py
Control_Swarm/src/envs/gym_env/: DMPCAviary.py
ros2_ws/src/control_swarm_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/control_swarm_ros/control_swarm_ros/: swarm_central_agent_node.py  swarm_decentral_agent_node.py  swarm_decentral_agent_node_crazy_SIM.py  swarm_decentral_agent_node_crazy_SIM_B1_23_2.py  swarm_decentral_agent_node_crazy_SIM_B2_23_2_Working.py
ros2_ws/src/control_swarm_ros/launch/: four_agent_cross._2.launch.py  gazebo_swarm.launch.py  mission_change_midflight_3.launch copy.py  swarm_centralized_control.launch.py  swarm_decentralized_control.launch.py  swarm_decentralized_control_crazy_SIM.launch.py  target_switch_midflight_4.launch.py  two_agents_cross_1.launch.py
(+23 files in other folders)
