[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "control_swarm"
version = "0.1.0"
description = "DMPC Swarm Control Framework"
authors = [{name="Shuvam"}]
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

