<?xml version="1.0"?>
<package format="3">
  <name>control_swarm_ros</name>
  <version>0.0.1</version>
  <description>ROS2 integration layer for DMPC Swarm</description>

  <maintainer email="shuvamroutray@gmail.com">shuvam</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

